--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  provider: ^4.0.2
+  http: ^0.12.0+4
 
 dev_dependencies:
   flutter_test:
