--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^4.1.1
+  mock_web_server: ^4.1.1
 
 
 # For information on the generic Dart part of this file, see the
