--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   provider: ^4.0.2
   http: ^0.12.0+4
   equatable: ^1.1.0
+  firebase_auth: ^0.15.5+2
+  google_sign_in: ^4.2.0
 
 dev_dependencies:
   flutter_test:
